# GenerateSwiftXCTestMain

./: .gitignore  CMakeLists.txt  Package.swift  README.md
.github/workflows/: build-and-test.yml
Sources/: CMakeLists.txt  GenerateSwiftXCTestMain.swift
Tests/: CMakeLists.txt  Tests.swift
cmake/: TopLevelDefaults.cmake
cmake/modules/: GenerateSwiftXCTestMain_FetchDependencies.cmake
